Added user's mood image to appear when at home page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,4 +6,8 @@
 
 {% block main %}
     <p>Welcome</p>
+    <div class="d-flex justify-content-center">
+        <img src = {{ image_path }} class="rounded mx-auto d-block" alt="User image" id="user_image">
+    </div>
+    
 {% endblock %}
