--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -21,7 +21,7 @@
     <body>
         <nav class="nav">
             {%if session["user_id"]%}
-                <a class="flex-sm-fill text-sm-center nav-link active emotive" aria-current="page" href="/index">Home</a>
+                <a class="flex-sm-fill text-sm-center nav-link active emotive" aria-current="page" href="/">Home</a>
                 <a class="flex-sm-fill text-sm-center nav-link emotive" href="/log_mood">Log your mood!</a>
                 <a class="flex-sm-fill text-sm-center nav-link emotive" href="/all_moods">All the feels!</a>
                 <a class="flex-sm-fill text-sm-center nav-link emotive" href="/logout">logout</a>
