--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -33,3 +33,10 @@
     color: rgb(43, 43, 42);
     background-color: rgb(247, 235, 171);
 }
+
+
+#user_image {
+    width: 62px;
+    height: 62px;
+  }
+  
