--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -24,6 +24,14 @@
     color: rgb(219, 219, 217);
 }
 
+.nav-link {
+  color: rgb(219, 219, 217);
+}
+
+.nav-link:hover {
+  color: rgb(247, 235, 171);
+}
+
 .btn-primary {
     border: none;
     background-color: rgb(57, 59, 87);
@@ -35,6 +43,10 @@
 }
 
 /*Custom css*/
+#menu-icon {
+  width: 100%;
+  height: 100%;
+}
 #user_image {
     width: 100px;
     height: 100px;
