--- a/app/templates/log_mood.html
+++ b/app/templates/log_mood.html
@@ -5,52 +5,53 @@
 
 {% block main %}
   <script src="static/js/select_mood.js" defer></script>
-  <p>Log mood here</p>
+  <p class="display-6">{{ log_nums }} Moods Logged!</p>
   <div id="recent-moods"></div>
   <div id="user_image_bg">
     <div class="rounded mx-auto d-block" id="mood-select-color"></div>
   </div>
     <form action="/log_mood" method="post" id="select-mood-form">
         <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+            <input class="form-control form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value=1>
             <label class="form-check-label" for="inlineRadio1">1</label>
           </div>
           <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+            <input class="form-control form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value=2>
             <label class="form-check-label" for="inlineRadio2">2</label>
           </div>
           <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+            <input class="form-control form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value=3>
             <label class="form-check-label" for="inlineRadio3">3</label>
           </div>
           <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4">
+            <input class="form-control form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value=4>
             <label class="form-check-label" for="inlineRadio3">4</label>
           </div>
           <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5">
+            <input class="form-control form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value=5>
             <label class="form-check-label" for="inlineRadio3">5</label>
           </div>
           <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6" value="option6">
+            <input class="form-control form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6" value=6>
             <label class="form-check-label" for="inlineRadio3">6</label>
           </div>
           <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio7" value="option7">
+            <input class="form-control form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio7" value=7>
             <label class="form-check-label" for="inlineRadio3">7</label>
           </div>
           <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio8" value="option8">
+            <input class="form-control form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio8" value=8>
             <label class="form-check-label" for="inlineRadio3">8</label>
           </div>
           <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio9" value="option9">
+            <input class="form-control form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio9" value=9>
             <label class="form-check-label" for="inlineRadio3">9</label>
           </div>
           <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio10" value="option10">
+            <input class="form-control form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio10" value=10>
             <label class="form-check-label" for="inlineRadio3">10</label>
           </div>
+          <button class="btn btn-primary" type="submit">Log Mood!</button>
     </form>
     
 {% endblock %}
