Added further functionality to user logging moods. User can now add a descriptive word for their mood selection. Also update the index html page to show the most recent log, as well as the corresponding mood-colors that they chose. A profanity filter will be added later to further sanitize user input aside from escaping characters.

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -82,6 +82,9 @@
     background-color: white;
 }
 
+#log-mood {
+  margin-top: 4vw;
+}
 @keyframes test_hover {
   from {
     background-position: 0% 100%;
