--- a/app/templates/log_mood.html
+++ b/app/templates/log_mood.html
@@ -10,48 +10,53 @@
   <div id="user_image_bg">
     <div class="rounded mx-auto d-block" id="mood-select-color"></div>
   </div>
-    <form action="/log_mood" method="post" id="select-mood-form">
+    <form action="/log_mood" method="post" id="select-mood-form" aria-required="true">
         <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value=1>
-            <label class="form-check-label" for="inlineRadio1">1</label>
-          </div>
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value=2>
-            <label class="form-check-label" for="inlineRadio2">2</label>
-          </div>
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value=3>
-            <label class="form-check-label" for="inlineRadio3">3</label>
-          </div>
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value=4>
-            <label class="form-check-label" for="inlineRadio3">4</label>
-          </div>
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value=5>
-            <label class="form-check-label" for="inlineRadio3">5</label>
-          </div>
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6" value=6>
-            <label class="form-check-label" for="inlineRadio3">6</label>
-          </div>
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio7" value=7>
-            <label class="form-check-label" for="inlineRadio3">7</label>
-          </div>
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio8" value=8>
-            <label class="form-check-label" for="inlineRadio3">8</label>
-          </div>
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio9" value=9>
-            <label class="form-check-label" for="inlineRadio3">9</label>
-          </div>
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio10" value=10>
-            <label class="form-check-label" for="inlineRadio3">10</label>
-          </div>
-          <button class="btn btn-primary" type="submit">Log Mood!</button>
+          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value=1>
+          <label class="form-check-label" for="inlineRadio1">1</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value=2>
+          <label class="form-check-label" for="inlineRadio2">2</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value=3>
+          <label class="form-check-label" for="inlineRadio3">3</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value=4>
+          <label class="form-check-label" for="inlineRadio3">4</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value=5>
+          <label class="form-check-label" for="inlineRadio3">5</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6" value=6>
+          <label class="form-check-label" for="inlineRadio3">6</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio7" value=7>
+          <label class="form-check-label" for="inlineRadio3">7</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio8" value=8>
+          <label class="form-check-label" for="inlineRadio3">8</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio9" value=9>
+          <label class="form-check-label" for="inlineRadio3">9</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" checked="true" name="inlineRadioOptions" id="inlineRadio10" value=10>
+          <label class="form-check-label" for="inlineRadio3">10</label>
+        </div>
+        <br>
+        <p>
+          <label for="one-word-d">Describe choice in one word: </label>
+          <input name="emot_description" id="input" type="text" placeholder="Happy" required>
+        </p>
+        <button class="btn btn-primary" type="submit" id="log-mood">Log Mood!</button>
     </form>
     
 {% endblock %}
