--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -85,6 +85,49 @@
 #log-mood {
   margin-top: 4vw;
 }
+
+.mood-word {
+  margin-top: 4vw;
+  font-size: large;
+  border-radius: 5%;
+  border: none;
+}
+.mood-word:focus {
+  outline: none !important;
+  border: 2px solid rgb(247, 235, 171);
+}
+
+
+.form-check-input {
+  border: 3px solid rgb(57, 59, 87);
+  width: 1em;
+  height: 1em;
+}
+.form-check-input:checked {
+  content: "";
+  width: 1em;
+  height: 1em;
+  border-radius: 50%;
+  transform: scale(1);
+  transition: 120ms transform ease-in-out;
+  box-shadow: inset 1em 1em 1em;
+  border: 3px solid rgb(247, 235, 171);
+}
+
+.form-check-input:focus {
+  outline: max(2px, 0.15em) solid currentColor;
+  outline-offset: max(2px, 0.15em);
+}
+
+.checkboxgroup {
+  display: inline-block;
+  text-align: center;
+  margin-left: 5%;
+}
+.checkboxgroup label {
+  display: block;
+}
+
 @keyframes test_hover {
   from {
     background-position: 0% 100%;
