--- a/app/templates/log_mood.html
+++ b/app/templates/log_mood.html
@@ -10,51 +10,51 @@
   <div id="user_image_bg">
     <div class="rounded mx-auto d-block" id="mood-select-color"></div>
   </div>
-    <form action="/log_mood" method="post" id="select-mood-form" aria-required="true">
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value=1>
+    <form action="/log_mood" method="post" id="select-mood-form" aria-required="true" class="border-start">
+        <div class="checkboxgroup">
           <label class="form-check-label" for="inlineRadio1">1</label>
+          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value=1>
         </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value=2>
+        <div class="checkboxgroup">
           <label class="form-check-label" for="inlineRadio2">2</label>
+          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value=2>
         </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value=3>
+        <div class="checkboxgroup">
           <label class="form-check-label" for="inlineRadio3">3</label>
+          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value=3>
         </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value=4>
+        <div class="checkboxgroup">
           <label class="form-check-label" for="inlineRadio3">4</label>
+          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value=4>
         </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value=5>
+        <div class="checkboxgroup">
           <label class="form-check-label" for="inlineRadio3">5</label>
+          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value=5>
         </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6" value=6>
+        <div class="checkboxgroup">
           <label class="form-check-label" for="inlineRadio3">6</label>
+          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6" value=6>
         </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio7" value=7>
+        <div class="checkboxgroup">
           <label class="form-check-label" for="inlineRadio3">7</label>
+          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio7" value=7>
         </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio8" value=8>
+        <div class="checkboxgroup">
           <label class="form-check-label" for="inlineRadio3">8</label>
+          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio8" value=8>
         </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio9" value=9>
+        <div class="checkboxgroup">
           <label class="form-check-label" for="inlineRadio3">9</label>
+          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio9" value=9>
         </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" checked="true" name="inlineRadioOptions" id="inlineRadio10" value=10>
+        <div class="checkboxgroup">
           <label class="form-check-label" for="inlineRadio3">10</label>
+          <input class="form-check-input" type="radio" checked="true" name="inlineRadioOptions" id="inlineRadio10" value=10>
         </div>
         <br>
         <p>
-          <label for="one-word-d">Describe choice in one word: </label>
-          <input name="emot_description" id="input" type="text" placeholder="Happy" required>
+          <label class="lead shadow-sm p-3 mb-5 bg-body rounded" for="one-word-d">Mood word: </label>
+          <input name="emot_description" id="input" type="text" placeholder="Happy" class="mood-word shadow-sm p-3 mb-5 bg-body rounded" required>
         </p>
         <button class="btn btn-primary" type="submit" id="log-mood">Log Mood!</button>
     </form>
