--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,10 @@
             <img src = {{ image_path }} class="rounded mx-auto d-block" alt="User image" id="user_image">
         </div>
     </div>
-
+    <blockquote class="blockquote">
+        <p class="mb-0"> "{{ quote_text }}"</p>
+        <footer class="blockquote-footer">{{ quote_author }}</footer>
+    </blockquote>
     <table class="table">
         <thead>
             <tr>
