fixed a bug where the mood color in index.html table did not work because of duplicate id's. Fixed the issue by implementing a custom value attribute to the tr tag.

--- a/app/templates/all_moods.html
+++ b/app/templates/all_moods.html
@@ -4,3 +4,15 @@
     All Moods
 {% endblock %}
 
+{% block main %}
+<script
+src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
+</script>
+<script defer>
+    const date_to_ratings = "{{ dates_and_ratings }}"
+    console.log(date_to_ratings)
+</script>
+
+
+
+{% endblock %}
