--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -30,7 +30,7 @@
             <tr>
                 <th scope="row"> {{ loop.index }} </th>
                 <td>
-                    <div class="rounded mx-auto d-block moods" id={{ mood.rating }}>'</div>
+                    <div class="rounded mx-auto d-block moods" value={{ mood.rating }}>'</div>
                 </td>
                 <td>{{ mood.rating }}</td>
                 <td>{{ mood.date }}</td>
