--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -64,9 +64,9 @@
             {% block main %}{% endblock %}
         </main>
 
-        <!-- <footer class="mb-5 small text-center text-muted">
-
-        </footer> -->
+        <footer class="mb-5 small text-center text-muted">
+          footer
+        </footer>
 
     </body>
 
