--- a/app/templates/all_moods.html
+++ b/app/templates/all_moods.html
@@ -5,14 +5,46 @@
 {% endblock %}
 
 {% block main %}
-<script
-src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
+<script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
+<canvas id="myChart" width="200" height="200"></canvas>
+<data id="data" style = "display:none;">{{ user_rated }}-{{ user_rated_count }}</data>
+<script>
+    const [r, g, b] = [57, 59, 87]
+    const color_dictionary = {
+        // each subsequent rgb value is calculated on a pre-selected set of 10 colors
+        // ranging from the saddest rgb color to the happiest
+        1: [r, g, b],
+        2:[r + 19 * 2, g + 17 * 2, b + 8 * 2],
+        3:[r + 19 * 3, g + 17 * 3, b + 15 * 3],
+        4:[r + 19 * 4, g + 17 * 4, b + 15 * 4],
+        5:[r + 19 * 5, g + 17 * 5, b + 15 * 5],
+        6:[r + 19 * 6, g + 17 * 6, b + 15 * 6],
+        7:[r + 19 * 7, g + 17 * 7, b + 8 * 7],
+        8:[r + 19 * 8, g + 17 * 8, b + 8 * 8],
+        9:[r + 19 * 9, g + 17 * 9, b + 8 * 9],
+        10:[r + 19 * 10, g + 17 * 10, b + 8 * 10],
+    }
+    const data = document.getElementById("data").innerText.split("-")
+    const user_data_x = JSON.parse("[" + data[0] + "]")[0]
+    const user_data_y = JSON.parse("[" + data[1] + "]")[0]
+    new Chart("myChart", {
+      type: "bar",
+      data: {
+        labels: user_data_x,
+        datasets: [{
+          fill: false,
+          lineTension: 0,
+          backgroundColor: "rgba(0,0,255,1.0)",
+          borderColor: "rgba(0,0,255,0.1)",
+          data: user_data_y
+        }]
+      },
+      options: {
+        legend: {display: true},
+        scales: {
+          yAxes: [{ticks: {min: 0, max:16}}],
+        }
+      }
+    });
 </script>
-<script defer>
-    const date_to_ratings = "{{ dates_and_ratings }}"
-    console.log(date_to_ratings)
-</script>
-
-
-
 {% endblock %}
