The wordcould image generator now works. Fixed the back end to correctly read file paths from the background and display the users generated wordcloud image. All that is left is setting up logs and testing

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -82,6 +82,13 @@ blockquote {
 .mb-0 {
   color : rgb(43, 43, 42);
 }
+
+#wordcloud{
+  border-radius:10%;
+  box-shadow: 7px 7px 7px 7px grey;
+  width:80%;
+  margin-bottom: 10%;
+}
 /*log mood*/
 #select-mood-form {
   margin-top: 4vw;
@@ -162,4 +169,10 @@ blockquote {
   to {
     background-position: 100% 0%;
   }
+}
+
+/*All moods*/
+.carousel-control-prev-icon, .carousel-control-next-icon {
+  background-color: rgb(57, 59, 87);
+  border-radius: 10%;
 }
