--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -51,7 +51,7 @@
             <a class="flex-sm-fill text-sm-center nav-link emotive" aria-current="page" href="/login">login</a>
             <a class="flex-sm-fill text-sm-center nav-link emotive" href="/register">register</a>
         </nav>
-        {%endif%}
+        {% endif %}
         {% if get_flashed_messages() %}
             <header>
                 <div class="alert alert-primary mb-0 text-center" role="alert">
@@ -65,7 +65,7 @@
         </main>
 
         <footer class="mb-5 small text-center text-muted">
-          footer
+          <a href="https://www.edx.org/course/introduction-computer-science-harvardx-cs50x">CS50 Final Project 2022</a>
         </footer>
 
     </body>
