--- a/app/templates/all_moods.html
+++ b/app/templates/all_moods.html
@@ -8,12 +8,12 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
 
 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-  <div class="carousel-inner">
+  <div class="carousel-inner container-fluid" style="width:80%">
     <div class="carousel-item active" data-bs-interval="10000">
-      <canvas id="barChart" width="100%" height="50%" class="d-block w-100"></canvas>
+      <canvas id="barChart" width="100%" height="70%" class="d-block w-100"></canvas>
     </div>
     <div class="carousel-item" data-bs-interval="10000">
-      <canvas id="lineChart" width="100%" height="50%" class="d-block w-100"></canvas>
+      <canvas id="lineChart" width="100%" height="70%" class="d-block w-100"></canvas>
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
