--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -10,11 +10,8 @@
         <!-- http://getbootstrap.com/docs/5.1/ -->
         <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
         <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"></script>
-
-        <!-- https://favicon.io/emoji-favicons/money-bag/ -->
-        <link href="/static/favicon.ico" rel="icon">
-
-        <link href="/static/styles.css" rel="stylesheet">
+        <link rel="icon" href="../static/favicon.ico">
+        <link href="/static/styles.css" rel="stylesheet"> 
         <title>Anon Mood-board: {% block title %}{% endblock %}</title>
     </head>
     <body>
@@ -24,7 +21,7 @@
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon">
-                      <img id="menu-icon" src="https://freesvg.org/img/menu-icon.png">
+                      <img id="menu-icon" src="../static/menu-icon.png">
                   </span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
