--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -62,7 +62,7 @@
         </main>
 
         <footer class="mb-5 small text-center text-muted">
-          <a href="https://www.edx.org/course/introduction-computer-science-harvardx-cs50x">CS50 Final Project 2022</a>
+          <a href="https://cs50.harvard.edu/x/2022/project/">CS50 Final Project 2022</a>
         </footer>
 
     </body>
