Fixed configuration and testing command line issues regarding running the app on different ports to enable running test and production versions of my application simultaneously. Also added a little instruction to log_mood.html which describes to the user how to log their mood.

--- a/app/templates/log_mood.html
+++ b/app/templates/log_mood.html
@@ -58,5 +58,7 @@
         </p>
         <button class="btn btn-primary" type="submit" id="log-mood">Log Mood!</button>
     </form>
-    
+    <footer class="mb-5 small text-center">
+      On a scale from 1-10 with 1 being the lowest, choose a number that you think represents your current mood.
+    </footer>
 {% endblock %}
